Expand ingredient logic
- Add new methods to controller with tests

- Add logic to ingredient service with tests

- Add IngredientDto validation